# trial

./: README.md
HelloWorld/: CMakeLists.txt  README.md
HelloWorld/.github/: copilot-instructions.md
Hoge/Hoge/: Hoge-Info.plist  HogeAppDelegate.h  HogeAppDelegate.m  HogeViewController.h  HogeViewController.m  main.m
Hoge/Hoge.xcodeproj/: project.pbxproj
Hoge/HogeTests/: HogeTests-Info.plist  HogeTests.m
HowToUseJIT/: Makefile
HowToUseJIT-mod/: HowToUseJIT.cpp
bootstrap-example/dashboard/: index.html
bootstrap-example/starter-template/: index.html
cmake-test/: CMakeLists.txt
cmake-test/lib/: CMakeLists.txt  sub.c
codeiq/: codeiq-q1129.gura  codeiq-q1198.gura  codeiq-q558.gura
docs/: index.md
docs/_includes/: navi-top.html
docs/_layouts/: basement.html  default.html  toppage.html
docs/document/: index.md  navi.html
docs/gallery/: index.md
dylib-test/: Makefile
gura-page/: .gitignore  _config.yml  index.md  start-server.sh
gura-page/_layouts/: basement.html  default.html  page.html  toppage.html
gura-page/assets/: gura-template.css  gura-template.js  (+1 more)
hello-world/: CMakeLists.txt  hello-world.cpp
image/: char.rom
jr200/: README.md
llvm-gen/: Makefile  Makefile~  llvm-gen.cpp
llvm-link/: Makefile  main.c  main.cpp  make-sample  sub.ll
llvm-sample/: llx  sample-addop.ll  sample-debuginfo.ll  sample.cpp
llvm-test/: b.cpp  c.cpp  e.c
llvmtest/: Makefile  test1.cpp  test1.ll
mylli/: Makefile  mylli.cpp  sample.ll  sub.c
opengl/: template.guraw
test1/: test1.guraw  translate.gura
test2/: Makefile  test.cpp
(+116 files in other folders)
